--- a/styles/style.css
+++ b/styles/style.css
@@ -25,12 +25,18 @@
 }
 
 .header-logo {
-    background-image: url(../images/logo-black.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
     height: 105px;
     width: 148px;
     justify-self: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.header-logo-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .address {
