--- a/styles/style.css
+++ b/styles/style.css
@@ -117,22 +117,34 @@
 }
 
 .cover-title {
-    /*background-color: blue;*/
     width: 1000px;
-    min-height: 385px;
     color: white;
+    margin: 165px auto 0;
+    /* Центрируем контейнер */
+    padding: 0;
+    box-sizing: border-box;
+
+}
+
+.cover-title h1 {
+    flex-direction: column;
+    display: flex;
+    justify-content: space-between;
+    /* Распределяем элементы между краями */
+
+    gap: 20px;
+    margin: 0;
+    padding: 0;
     font-weight: 700;
     font-size: 100px;
     line-height: 115px;
     letter-spacing: 0.3em;
     text-transform: uppercase;
-    margin: 165px 0 0;
-    position: relative;
 }
 
 .cover-title-part {
-    position: absolute;
-    margin: 0;
+    display: inline-block;
+    /* Элементы занимают только необходимую ширину */
     font-family: Raleway, 'Helvetica Neue', Arial, sans-serif;
     font-weight: 700;
     font-size: 100px;
@@ -141,22 +153,17 @@
 }
 
 .cover-title-left {
-    width: 286px;
-    top: 0;
-    left: 0;
+    align-self: flex-start;
 }
 
 .cover-title-center {
-    width: 339px;
-    top: 120px;
-    left: 330px;
+    align-self: center;
+    margin-right: -0.3em;
 }
 
 .cover-title-right {
-    width: 387px;
-    top: 240px;
-    right: 0;
-    text-align: right;
+    align-self: flex-end;
+    margin-right: -0.3em;
 }
 
 .cover-description {
